# sterreschrijver

./: .build-tools.cson  .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cat_entry.cat  cat_entry.txt  cmake_install.cmake  readme  sterrenschrijver  willekeurige_tekst.dxf
EPH/: JPLEPH  asc2eph.f  etest  testpo.423
Novas_C3.1/: CMakeLists.txt  Makefile  cmake_install.cmake  stertest.c
Novasextra/: CMakeLists.txt  Makefile  Novasextra.c  Novasextra.h  cmake_install.cmake
conv_cat/: CMakeLists.txt  Makefile  cat_entry.txt  cmake_install.cmake  conv_cat_entry.c  convcat
draw/: draw.py  run.sh
dxf/: CMakeLists.txt  Makefile  cmake_install.cmake  dl_codes.h  dl_dxf.h  dl_writer.h
dxfbezierline/: CMakeLists.txt  Makefile  cmake_install.cmake  dxfbezierline.cpp  dxfbezierline.h  testdxflines  testdxflines.cpp
include/: point.h  sterconfig.h
quat/: Quaternion.h
starclass/: CMakeLists.txt  Makefile  cmake_install.cmake  getopt.cpp  starclass.cpp  starclass.h  starlist  starlist.cpp
tmp/: cat_entry.cat
